saint-lascivious.github.io: rethink nav lists a little
 - differentiate card and page navs
   seperate lists
   seperate formatting
 - drop hero images down frame a little
   below subtext in most cases

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -180,8 +180,14 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
             <ul>
-              <li><a href="265.html#example">Example Pokédex over DNS Queries</a></li>
+              <li><a href="265.html#example">#Example Pokédex over DNS Queries</a></li>
             </ul>
+            <p class="embiggen sainternet-subheader-centered">
+              A wild <b>Wurmple</b> appeared!
+            </p>
+            <p>
+              Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
+            </p>
             <a href="pokedexoverdns.html" class="subterfuge">
               <picture class="light-mode-img">
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
@@ -196,12 +202,6 @@
                 <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
               </picture>
             </a>
-            <p class="embiggen sainternet-subheader-centered">
-              A wild <b>Wurmple</b> appeared!
-            </p>
-            <p>
-              Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
-            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="example">
