--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -180,10 +180,10 @@
               The following describes connecting to Sainternet Filtered DNS in several platforms, services.
             </p>
             <ul>
-              <li><a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a></li>
-              <li><a href="connecttosainternet.html#appleiosmacos">Apple iOS/MacOS</a></li>
-              <li><a href="connecttosainternet.html#googlechromechromium">Google Chrome/Chromium</a></li>
-              <li><a href="connecttosainternet.html#mozillafirefox">Mozilla Firefox</a></li>
+              <li><a href="connecttosainternet.html#androidprivatedns">#Android Private DNS</a></li>
+              <li><a href="connecttosainternet.html#appleiosmacos">#Apple iOS/MacOS</a></li>
+              <li><a href="connecttosainternet.html#googlechromechromium">#Google Chrome/Chromium</a></li>
+              <li><a href="connecttosainternet.html#mozillafirefox">#Mozilla Firefox</a></li>
             </ul>
           </div>
         </div>
