--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -189,16 +189,16 @@
               Often about technical topics.
             </p>
             <ul>
-              <li><a href="devdiary.html#devdiaryidliketothinkimprettyprogressive">Dev Diary: I’d Like to Think I’m Pretty Progressive</a></li>
-              <li><a href="devdiary.html#devdiarygottagofast">Dev Diary: Gotta Go Fast!</a></li>
-              <li><a href="devdiary.html#devdiarygoingoffline">Dev Diary: Going Offline</a></li>
+              <li><a href="devdiary.html#idliketothinkimprettyprogressive">#I’d Like to Think I’m Pretty Progressive</a></li>
+              <li><a href="devdiary.html#gottagofast">#Gotta Go Fast!</a></li>
+              <li><a href="devdiary.html#goingoffline">#Going Offline</a></li>
             </ul>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="devdiaryidliketothinkimprettyprogressive">
+        <div class="sainternet-container mdl-grid" id="idliketothinkimprettyprogressive">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Dev Diary: I’d Like to Think I’m Pretty Progressive</span></h3>
+            <h3><span class="embiggen">I’d Like to Think I’m Pretty Progressive</span></h3>
             <p class="embiggen" id="datetime">
               first posted on Thursday, 11 May 2023 21:10+12:00 (NZST)
             </p>
@@ -245,10 +245,10 @@
             </ol>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="devdiarygottagofast">
+        <div class="sainternet-container mdl-grid" id="gottagofast">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Dev Diary: Gotta Go Fast!</span></h3>
+            <h3><span class="embiggen">Gotta Go Fast!</span></h3>
             <p class="embiggen" id="datetime">
               first posted on Tuesday, 9 May 2023 07:00+12:00 (NZST)<br>updated on Tuesday, 9 May 2023 21:45+12:00 (NZST)
             </p>
@@ -328,10 +328,10 @@
             </ol>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="devdiarygoingoffline">
+        <div class="sainternet-container mdl-grid" id="goingoffline">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Dev Diary: Going Offline</span></h3>
+            <h3><span class="embiggen">Going Offline</span></h3>
             <p class="embiggen" id="datetime">
               first posted on Friday, 14 April 2023 22:30+12:00 (NZST)<br>updated on Saturday, 15 April 2023 21:30+12:00 (NZST)
             </p>
