--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -183,6 +183,14 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Filtered DNS</span></h3>
+            <ul>
+              <li>&gt; <a href="frequentlyaskedquestions.html#frequentlyaskedquestions">Frequently Asked Questions</a></li>
+              <li>&gt; <a href="connecttosainternet.html#connecttosainternet">Connect to Sainternet</a></li>
+              <li>&gt; <a href="portsandprotocols.html#portsandprotocols">Ports and Protocols</a></li>
+              <li>&gt; <a href="technologies.html#technologies">Technologies</a></li>
+              <li>&gt; <a href="testsainternet.html#testsainternet">Test Sainternet</a></li>
+              <li>&gt; <a href="reportaproblem.html#reportaproblem">Report a Problem</a></li>
+            </ul>
             <p>
               Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
             </p>
