--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -175,15 +175,15 @@
               Answers to some frequently asked questions regarding <code>dns.sainternet.xyz</code> and <code>sainternet.xyz</code>.
             </p>
             <ul>
-              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis">Your ISP Is OK with This?</a></li>
-              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows">What’s with All the Rainbows?</a></li>
-              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal">Is dns.sainternet.xyz Legal?</a></li>
-              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi">Does dns.sainternet.xyz Have an API?</a></li>
-              <li><a href="frequentlyaskedquestions.html#pwaversionneverseemstochange">The PWA Version Never Seems to Change, What Gives?</a></li>
-              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a></li>
-              <li><a href="frequentlyaskedquestions.html#howmuch">How Much?</a></li>
-              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney">How does Sainternet Make Money?</a></li>
-              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet">So, Who Funds Sainternet?</a></li>
+              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis">#Your ISP Is OK with This?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows">#What’s with All the Rainbows?</a></li>
+              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal">#Is dns.sainternet.xyz Legal?</a></li>
+              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi">#Does dns.sainternet.xyz Have an API?</a></li>
+              <li><a href="frequentlyaskedquestions.html#pwaversionneverseemstochange">#The PWA Version Never Seems to Change, What Gives?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy">#Who, What, When, Where and Why?</a></li>
+              <li><a href="frequentlyaskedquestions.html#howmuch">#How Much?</a></li>
+              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney">#How does Sainternet Make Money?</a></li>
+              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet">#So, Who Funds Sainternet?</a></li>
             </ul>
           </div>
         </div>
