--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -199,13 +199,16 @@
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
             <ul>
-              <li><a href="newsandupdates.html#somepunaboutblocksorblocking">Some Pun About Blocks or Blocking</a></li>
-              <li><a href="newsandupdates.html#thepolishinvasionof2023">The Polish Invasion of 2023</a></li>
-              <li><a href="newsandupdates.html#certaindoom">CERTain Doom</a></li>
-              <li><a href="newsandupdates.html#unepokedexsilvousplait">Une Pokédex, S'il Vous Plaît</a></li>
-              <li><a href="newsandupdates.html#analyticsdisclosure">Analytics Disclosure</a></li>
-              <li><a href="newsandupdates.html#pwa">PWA!</a></li>
-              <li><a href="archive.html#archivedposts">Archived Posts</a></li>
+              <li>&gt; <a href="devdiary.html#devdiary">Dev Diary</a></li>
+              <li>&gt; <a href="archive.html#archivedposts">Archived Posts</a></li>
+            </ul>
+            <ul>
+              <li><a href="newsandupdates.html#somepunaboutblocksorblocking">#Some Pun About Blocks or Blocking</a></li>
+              <li><a href="newsandupdates.html#thepolishinvasionof2023">#The Polish Invasion of 2023</a></li>
+              <li><a href="newsandupdates.html#certaindoom">#CERTain Doom</a></li>
+              <li><a href="newsandupdates.html#unepokedexsilvousplait">#Une Pokédex, S'il Vous Plaît</a></li>
+              <li><a href="newsandupdates.html#analyticsdisclosure">#Analytics Disclosure</a></li>
+              <li><a href="newsandupdates.html#pwa">#PWA!</a></li>
             </ul>
           </div>
         </div>
