--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -165,11 +165,11 @@
               This page lists some of my more popular projects on GitHub.
             </p>
             <ul>
-              <li><a href="projects.html#dnsproxy-config">dnsproxy config</a></li>
-              <li><a href="projects.html#haha_cache_go_brrr">haha cache go brrr</a></li>
-              <li><a href="projects.html#munin-pihole-plugins">munin pihole plugins</a></li>
-              <li><a href="projects.html#saint-lascivious_github_io">sainternet.xyz</a></li>
-              <li><a href="projects.html#unbound-config">unbound config</a></li>
+              <li><a href="projects.html#dnsproxy-config">#dnsproxy config</a></li>
+              <li><a href="projects.html#haha_cache_go_brrr">#haha cache go brrr</a></li>
+              <li><a href="projects.html#munin-pihole-plugins">#munin pihole plugins</a></li>
+              <li><a href="projects.html#saint-lascivious_github_io">#sainternet.xyz</a></li>
+              <li><a href="projects.html#unbound-config">#unbound config</a></li>
             </ul>
           </div>
         </div>
