--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -180,10 +180,10 @@
               Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
             </p>
             <ul>
-              <li><a href="technologies.html#dnsdist">dnsdist</a></li>
-              <li><a href="technologies.html#dnsproxy">dnsproxy</a></li>
-              <li><a href="technologies.html#piholeftl">pihole-FTL</a></li>
-              <li><a href="technologies.html#unbound">unbound</a></li>
+              <li><a href="technologies.html#dnsdist">#dnsdist</a></li>
+              <li><a href="technologies.html#dnsproxy">#dnsproxy</a></li>
+              <li><a href="technologies.html#piholeftl">#pihole-FTL</a></li>
+              <li><a href="technologies.html#unbound">#unbound</a></li>
             </ul>
           </div>
         </div>
