--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -180,9 +180,9 @@
               The following describes testing Sainternet Filtered DNS using several methods, utilities.
             </p>
             <ul>
-              <li><a href="testsainternet.html#usingdig">Using dig</a></li>
-              <li><a href="testsainternet.html#usingdnslookup">Using dnslookup</a></li>
-              <li><a href="testsainternet.html#usingnslookup">Using nslookup</a></li>
+              <li><a href="testsainternet.html#usingdig">#Using dig</a></li>
+              <li><a href="testsainternet.html#usingdnslookup">#Using dnslookup</a></li>
+              <li><a href="testsainternet.html#usingnslookup">#Using nslookup</a></li>
             </ul>
           </div>
         </div>
