--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -182,8 +182,14 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <ul>
-              <li><a href="404.html#example">Example Pokédex over DNS Queries</a></li>
+              <li><a href="404.html#example">#Example Pokédex over DNS Queries</a></li>
             </ul>
+            <p class="embiggen sainternet-subheader-centered">
+              A wild <b>Luxio</b> appeared!
+            </p>
+            <p>
+              Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+            </p>
             <a href="pokedexoverdns.html" class="subterfuge">
               <picture class="light-mode-img">
                 <source srcset="resources/images/luxio.webp" type="image/webp">
@@ -198,12 +204,6 @@
                 <img src="resources/images/luxio-shiny.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
             </a>
-            <p class="embiggen sainternet-subheader-centered">
-              A wild <b>Luxio</b> appeared!
-            </p>
-            <p>
-              Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
-            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="example">
