--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -166,10 +166,10 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
             <ul>
-              <li><a href="debug.html#consolelogging">Console Logging</a></li>
-              <li><a href="debug.html#deletestorage">Delete Storage</a></li>
-              <li><a href="debug.html#pingserviceworker">Ping Service Worker</a></li>
-              <li><a href="debug.html#serviceworkerinfo">Service Worker Info</a></li>
+              <li><a href="debug.html#consolelogging">#Console Logging</a></li>
+              <li><a href="debug.html#deletestorage">#Delete Storage</a></li>
+              <li><a href="debug.html#pingserviceworker">#Ping Service Worker</a></li>
+              <li><a href="debug.html#serviceworkerinfo">#Service Worker Info</a></li>
             </ul>
           </div>
         </div>
