saint-lascivious.github.io: s/fa-solid/material-icons/g
 - remove fontawesome solid
   (non-trivial reduction in traffic/preload/overhead)
   use regular material icons instead
 - bump service worker cache version to 1.3.0

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - deleted:    resources/fontawesome-free-6.4.0-web/css/.formatted/solid.min.css
 - deleted:    resources/fontawesome-free-6.4.0-web/css/solid.min.css
 - deleted:    resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.ttf
 - deleted:    resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.woff2
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -78,7 +78,6 @@
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.woff2">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -89,8 +88,6 @@
 
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
@@ -160,7 +157,7 @@
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="#pokemon265">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Pokémon #404</b></a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon265">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;<b>Pokémon #404</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
         <nav class="mdl-navigation mdl-layout--large-screen-only">
@@ -234,7 +231,7 @@
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
               <span id="tooltip-email">
-                <icon class="fa-solid fa-at"></icon>
+                <icon class="material-icons">email</icon>
               </span>
               <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
                 Email
