--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -73,7 +73,6 @@
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.woff2">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -84,8 +83,6 @@
 
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
@@ -149,12 +146,12 @@
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="#connecttosainternet">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;<b>Connect to Sainternet</b></a>
-          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
-          <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</a>
+          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;FAQ</a>
+          <a class="embiggen mdl-navigation__link" href="#connecttosainternet">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;<b>Connect to Sainternet</b></a>
+          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Ports and Protocols</a>
+          <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
@@ -195,8 +192,8 @@
               Android 9 (Pie) or higher required.
             </p>
             <ol>
-              <li>Settings&nbsp;<icon class="fa-solid fa-cog"></icon></li>
-              <li>Search&nbsp;<icon class="fa-solid fa-magnifying-glass"></icon></li>
+              <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
+              <li>Search&nbsp;<icon class="material-icons">search</icon></li>
               <li>Search for "Private DNS"</li>
               <li>Select "Private DNS"</li>
               <li>Select "Designated Private DNS"</li>
@@ -254,8 +251,8 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><icon class="fa-brands fa-chrome"></icon>&nbsp;<span class="embiggen">Google<br>Chrome/Chromium</span></h3>
             <ol>
-              <li>Overflow Menu&nbsp;<icon class="fa-solid fa-ellipsis-vertical"></icon></li>
-              <li>Settings&nbsp;<icon class="fa-solid fa-cog"></icon></li>
+              <li>Overflow Menu&nbsp;<icon class="material-icons">more_vert</icon></li>
+              <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
               <li>Select "Privacy and security"</li>
               <li>Select "Use secure DNS"</li>
               <li>Select "Choose another provider"</li>
@@ -269,8 +266,8 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon>&nbsp;<span class="embiggen">Mozilla<br>Firefox</span></h3>
             <ol>
-              <li>Menu&nbsp;<icon class="fa-solid fa-bars"></icon></li>
-              <li>Settings&nbsp;<icon class="fa-solid fa-cog"></icon></li>
+              <li>Menu&nbsp;<icon class="material-icons">menu</icon></li>
+              <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
               <li>Select "General"</li>
               <li>Select "Network Settings"</li>
               <li>Select "Settings"</li>
@@ -296,7 +293,7 @@
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
               <span id="tooltip-email">
-                <icon class="fa-solid fa-at"></icon>
+                <icon class="material-icons">email</icon>
               </span>
               <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
                 Email
