--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -70,7 +70,6 @@
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.woff2">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -79,8 +78,6 @@
 
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
@@ -236,7 +233,7 @@
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
               <span id="tooltip-email">
-                <icon class="fa-solid fa-at"></icon>
+                <icon class="material-icons">email</icon>
               </span>
               <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
                 Email
