--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -70,7 +70,6 @@
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.woff2">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -79,8 +78,6 @@
 
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
@@ -156,12 +153,12 @@
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;FAQ</a>
-          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Connect to Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Ports and Protocols</a>
-          <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Technologies</a>
-          <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Test Sainternet</a>
-          <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Report a Problem</a>
+          <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;FAQ</a>
+          <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Connect to Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Ports and Protocols</a>
+          <a class="embiggen mdl-navigation__link" href="technologies.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="testsainternet.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="reportaproblem.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Report a Problem</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
@@ -218,7 +215,7 @@
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
               <span id="tooltip-email">
-                <icon class="fa-solid fa-at"></icon>
+                <icon class="material-icons">email</icon>
               </span>
               <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
                 Email
