--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -87,7 +87,6 @@
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2">
     <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-solid-900.woff2">
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -98,8 +97,6 @@
 
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/solid.min.css">
     <link rel="preload" as="style" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.4.0-web/css/brands.min.css">
 
@@ -171,8 +168,8 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
-          <a class="embiggen mdl-navigation__link" href="devdiary.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Dev Diary</a>
-          <a class="embiggen mdl-navigation__link" href="archive.html">&nbsp;<icon class="fa-solid fa-caret-right"></icon>&nbsp;Archived Posts</a>
+          <a class="embiggen mdl-navigation__link" href="devdiary.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Dev Diary</a>
+          <a class="embiggen mdl-navigation__link" href="archive.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Archived Posts</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
@@ -570,7 +567,7 @@
           <li>
             <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
               <span id="tooltip-email">
-                <icon class="fa-solid fa-at"></icon>
+                <icon class="material-icons">email</icon>
               </span>
               <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
                 Email
