--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -177,7 +177,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
             <ul>
-              <li><a href="265.html#example">#Example Pokédex over DNS Queries</a></li>
+              <li><a href="265.html#265examplequeries">#Example Pokédex over DNS Queries</a></li>
             </ul>
             <p class="embiggen sainternet-subheader-centered">
               A wild <b>Wurmple</b> appeared!
@@ -201,7 +201,7 @@
             </a>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="example">
+        <div class="sainternet-container mdl-grid" id="265examplequeries">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
