--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -179,7 +179,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <ul>
-              <li><a href="404.html#example">#Example Pokédex over DNS Queries</a></li>
+              <li><a href="404.html#404examplequeries">#Example Pokédex over DNS Queries</a></li>
             </ul>
             <p class="embiggen sainternet-subheader-centered">
               A wild <b>Luxio</b> appeared!
@@ -203,7 +203,7 @@
             </a>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="example">
+        <div class="sainternet-container mdl-grid" id="404examplequeries">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
