--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -177,6 +177,9 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">National Pokédex over DNS</span></h3>
+            <ul>
+              <li><a href="pokedexoverdns.html#examplequeries">#Example Pokédex over DNS Queries</a></li>
+            </ul>
             <p>
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
             </p>
@@ -193,6 +196,12 @@
             <p>
               This fun little (<i>ab</i>)use of DNS allows one to query a Pokémon species name (currently supported: US, JP, FR, DE) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: US, JP <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>, FR, DE).
             </p>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="examplequeries">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
