--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -183,39 +183,39 @@
             <div class="enlift rounded-corners shadow-boxing">
             <table>
               <tr>
-                <th>Transport</th>
+                <th>Type</th>
                 <th>Address</th>
-                <th>Protocol & Port</th>
+                <th>Port</th>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
                 <td><code>dns.sainternet.xyz</code></td>
-                <td>TCP <code>443</code></td>
+                <td>TCP<br><code>443</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
                 <td><code>dns.sainternet.xyz</code></td>
-                <td>UDP <code>443</code></td>
+                <td>UDP<br><code>443</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                <td><code>119.224.127.171</code><br><code>::ffff:119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
-                <td>TCP <code>53</code></td>
+                <td><code>119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
+                <td>TCP<br><code>53</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
                 <td><code>dns.sainternet.xyz</code></td>
-                <td>TCP <code>853</code></td>
+                <td>TCP<br><code>853</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                <td><code>119.224.127.171</code><br><code>::ffff:119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
-                <td>UDP <code>53</code></td>
+                <td><code>119.224.127.171</code><br><code>::ffff:77e0:7fab</code></td>
+                <td>UDP<br><code>53</code></td>
               </tr>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
                 <td><code>dns.sainternet.xyz</code></td>
-                <td>UDP <code>853</code></td>
+                <td>UDP<br><code>853</code></td>
               </tr>
             </table>
             </div>
